  in inventory.
  This is useful for skills that require an item in the inventory (Stone
  Curse, Warp, Aqua Benedicta, etc.)
  http://openkore.sourceforge.net/forum/viewtopic.php?t=1729
- Added command 'talk text blablabla' and the ability to specify text reply
  in portals' NPC steps (t="some text")
- Added command 'death <player #>' for use if you get the Death spell from
  Abracadabra.

New config options:
- *_inInventory_name : inventory item name
  *_inInventory_qty  : check for quantity
  These are add-ons for the skill usage, item usage and equipAuto config
  options.
- *_currentAI : check for current active AI sequence (eg attack, move...)

Bug fixes:
- "vender" command now properly detects the "end" argument. Bugfix by Fenris.
- Attacks will now properly time out when failed.
- Properly support tabs in avoid.txt
- equipAuto for teleport/skills now works, require ai_equipAuto_skilluse_giveup
  in timeout.txt
- Hopefully fixed bug where typing 'follow a' and then 'follow b' will make
  bot still follow a
- autoTalkCont bugfix by fov.
- Fixed new ai_skillUse to support temporary skills.
- Fixed 'monster', 'mvp' and 'death' commands to work with new ai_skillUse.
- Fixed storage access when storage is empty.
- Various routing bug fixes (by jsteng).

Internal:
- Portal compilation is now 30% faster.

Credits:
- Fenris: Tk interface improvements.
- aputs: Inventory checking config options.
- fov: Storage access bugfix.

Internal:
- Added AI.pm, which is a wrapper for @ai_seq and @ai_seq_args.
- Added $char, an alias for $chars[$config{'char'}].
- ai_skillUse's first parameter is skillID (eg AL_HEAL) rather then the
  internal ID Number

==================
### 1.3.1 (beta)
==================

New features:
- Easier and more flexible avoid.txt format by joseph.
  You should download the new avoid.txt from the latest confpack! The
  old format is not supported anymore.
  See also http://openkore.sourceforge.net/forum/viewtopic.php?t=1633
